--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.adsi.ambiental.ui.main.PageViewModel" />
+            type="com.adsi.ambiental.viewmodel.PageViewModel" />
 
     </data>
 
@@ -15,7 +15,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.PlaceholderFragment">
+        tools:context=".ui.main.fragments.PlaceholderFragment">
 
         <TextView
             android:id="@+id/txtMain"
