--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,7 +15,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.fragments.PlaceholderFragment">
+        tools:context=".ui.main.fragments.PlayFragment">
 
         <TextView
             android:id="@+id/txtMain"
@@ -57,6 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
+            android:id="@+id/rg"
             android:layout_marginEnd="16dp"
             android:visibility="@{viewmodel.isVisibleRadioGroup}"
             app:layout_constraintBottom_toTopOf="@+id/btnAction"
