--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.adsi.ambiental.viewmodel.PageViewModel" />
+            type="com.adsi.ambiental.viewmodel.PlayViewModel" />
 
     </data>
 
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:visibility="@{viewmodel.isVisibleRadioGroup}"
+            android:visibility="@{viewmodel.visibilityRadioGroup}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtDescription">
@@ -98,7 +98,7 @@
             android:indeterminate="false"
             android:max="200"
             android:progress="@{viewmodel.progress}"
-            android:visibility="@{viewmodel.isVisibleProgressBar}"
+            android:visibility="@{viewmodel.visibilityProgressBar}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -109,6 +109,7 @@
             android:layout_height="128dp"
             android:layout_marginTop="252dp"
             android:layout_marginBottom="32dp"
+            android:visibility="@{viewmodel.visibilityImg}"
             app:layout_constraintBottom_toTopOf="@+id/btnAction"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.533"
