--- a/app/src/main/res/drawable-anydpi/ic_check.xml
+++ b/app/src/main/res/drawable-anydpi/ic_check.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#38823C"
+    android:tint="#00C853"
     android:alpha="0.8">
     <path
         android:fillColor="#FF000000"
